unpackaged/main/default/objects/Interface_Monitoring__c/Interface_Monitoring__c.object-meta.xml
<CustomObject>
    <label>Interface Monitoring</label>
    <nameField>
        <displayFormat>MSG-{000000000}</displayFormat>
        <label>Interface Monitoring Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Monitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>