unpackaged/main/default/objects/Interface_Monitoring__c/fields/Outgoing_Message__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Message__c</fullName>
    <label>Outgoing Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>