unpackaged/main/default/objects/Interface_Monitoring__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>