unpackaged/main/default/objects/Interface_Monitoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interface_Name__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Message_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>